fixed issue with additional scrollbar

--- a/components/home/main.module.css
+++ b/components/home/main.module.css
@@ -2,7 +2,6 @@
   max-height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
-  margin-top: 1%;
   display: flex;
   flex-direction: column;
   align-items: center;
