--- a/components/sections/aboutMe.module.css
+++ b/components/sections/aboutMe.module.css
@@ -1,5 +1,5 @@
 .aboutMe {
-  min-height: 90vh;
+  min-height: 100vh;
 }
 .theGrid {
   min-height: 80vh;
